--- a/src/styles/smart-watch.css
+++ b/src/styles/smart-watch.css
@@ -1,7 +1,3 @@
-.smart-watch-control {
-  position: relative;
-}
-
 .smart-watch-control > button {
   width: auto;
   min-width: 0;
